--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,31 @@ body {
     width: 320px;
     height: 130px;
     margin: 16px;
+    overflow: hidden;
+}
+
+.button-with-icon {
+    background-color: #2d72f0;
+    border-radius: 12px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button-with-icon h3 {
+    color: white;
+    font-weight: normal;
+    margin: 0;
+    padding: 16px;
+}
+
+.button-with-icon img {
+    align-self: end;
+    padding: 16px;
 }
 
 .weather-forecast {
     display: flex;
-    height: 100%;
     justify-content: space-between;
 }
 
